Add patch to support Java 8 builds. (#181)
* Add patch to support Java 8 builds.

Separate plugins for jdk11 and jdk8 builds.
Make jdk11 the default.

* Change use of collections for Java 8.

Prefer Arrays.asList to reduce the Java 8 patch.

* Update travis build for jdk11 and jdk8.