@@ -1,6 +1,7 @@
 /* See LICENSE for licensing and NOTICE for copyright. */
 package org.ldaptive;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
@@ -140,7 +141,7 @@ public class DnsSrvConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 3);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
@@ -151,7 +152,7 @@ public class DnsSrvConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 1);
@@ -162,14 +163,14 @@ public class DnsSrvConnectionStrategyTest
     // confirm the inactive entry stays at the end
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389"),
         new LdapURL("ldap://directory-1.ldaptive.org:389")));
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 1);
@@ -181,14 +182,14 @@ public class DnsSrvConnectionStrategyTest
     strategy.success(strategy.ldapURLSet.getInactiveUrls().iterator().next());
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 3);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
@@ -210,7 +211,7 @@ public class DnsSrvConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 3);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
@@ -225,14 +226,14 @@ public class DnsSrvConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getInactiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389")));
 
     // confirm the inactive entries stay at the end
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-3.ldaptive.org:389"),
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389")));
@@ -243,7 +244,7 @@ public class DnsSrvConnectionStrategyTest
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getInactiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389")));
 
@@ -251,14 +252,14 @@ public class DnsSrvConnectionStrategyTest
     strategy.success(strategy.ldapURLSet.getInactiveUrls().iterator().next());
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389")));
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 2);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
     Assert.assertEquals(strategy.ldapURLSet.getInactiveUrls().size(), 1);
@@ -270,14 +271,14 @@ public class DnsSrvConnectionStrategyTest
     strategy.success(strategy.ldapURLSet.getInactiveUrls().iterator().next());
     Assert.assertEquals(
       StreamSupport.stream(strategy.spliterator(), false).collect(Collectors.toList()),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
     Assert.assertEquals(strategy.ldapURLSet.getActiveUrls().size(), 3);
     Assert.assertEquals(
       strategy.ldapURLSet.getActiveUrls(),
-      List.of(
+      Arrays.asList(
         new LdapURL("ldap://directory-1.ldaptive.org:389"),
         new LdapURL("ldap://directory-2.ldaptive.org:389"),
         new LdapURL("ldap://directory-3.ldaptive.org:389")));
